3.Ingress/deploy-ingress-test-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test-1
  labels:
    app: ingress-test-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-test-1
  template:
    metadata:
      labels:
        app: ingress-test-1
    spec:
      containers:
      - name: ingress-test-1
        image: nginx:1.12
        ports: 
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: nginx-config
        configMap:
          name: ingress-test-1
